Fix css bug
Fixed a bug where the piano components overlap.
Added scss file to handle css file more easily.

--- a/src/components/Piano/Keyboard/Octave/Key/Key.module.css
+++ b/src/components/Piano/Keyboard/Octave/Key/Key.module.css
@@ -1,79 +1,59 @@
 .Key {
-  position: absolute;
+  position: relative;
+  border-left: solid 1px black;
 }
 
 .White {
   z-index: 0;
   background-color: white;
-  width: 30px;
-  height: 90px;
+  width: 45px;
+  height: 135px;
 }
 
 .Black {
   z-index: 1;
   background-color: black;
-  width: 20px;
-  height: 60px;
+  width: 30px;
+  height: 90px;
 }
 
 .White .Click {
   background-color: lightcoral;
-  transform-origin: center top;
-  transform: scaleX(90%);
-  transform: scaleY(90%);
+  -webkit-transform-origin: center top;
+          transform-origin: center top;
+  -webkit-transform: scaleX(90%);
+          transform: scaleX(90%);
+  -webkit-transform: scaleY(90%);
+          transform: scaleY(90%);
 }
 
 .Black .Click {
   background-color: crimson;
-  transform-origin: center top;
-  transform: scaleX(90%);
-  transform: scaleY(90%);
-}
-
-.C {
-  left: 0px;
-}
-
-.D {
-  left: 32px;
-}
-
-.E {
-  left: 64px;
-}
-
-.F {
-  left: 96px;
-}
-
-.G {
-  left: 128px;
-}
-
-.A {
-  left: 160px;
-}
-
-.B {
-  left: 192px;
+  -webkit-transform-origin: center top;
+          transform-origin: center top;
+  -webkit-transform: scaleX(90%);
+          transform: scaleX(90%);
+  -webkit-transform: scaleY(90%);
+          transform: scaleY(90%);
 }
 
 .C-sharp {
-  left: 21px;
+  left: 30px;
 }
 
 .D-sharp {
-  left: 53px;
+  left: 45px;
 }
 
 .F-sharp {
-  left: 117px;
+  left: 105px;
 }
 
 .G-sharp {
-  left: 150px;
+  left: 120px;
 }
 
 .A-sharp {
-  left: 186px;
+  left: 135px;
 }
+/*# sourceMappingURL=Key.module.css.map */
