--- a/src/components/Piano/Keyboard/Octave/Octave.module.css
+++ b/src/components/Piano/Keyboard/Octave/Octave.module.css
@@ -1,3 +1,12 @@
 .Octave {
   position: relative;
 }
+.White {
+  display: inline-flex;
+  position: relative;
+}
+.Black {
+  display: inline-flex;
+  position: absolute;
+  left: 0;
+}
